data collected. Add: final datasets to run analysis on. Summaries of the best models so far

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "latex-workshop.latex.build.forceRecipeUsage": false
+    "latex-workshop.latex.build.forceRecipeUsage": false,
+    "files.watcherExclude": {
+        "**/target": true
+    }
 }
