add: partial description of implementation to final thesis, fix typos

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,9 @@
     "latex-workshop.latex.build.forceRecipeUsage": false,
     "files.watcherExclude": {
         "**/target": true
-    }
+    },
+    "cSpell.words": [
+        "distractor",
+        "saccade"
+    ]
 }
